add register page

--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,9 @@
 .tppattern {
   background-image: url('../public/tp-pattern.jpg');
 }
+
+/* .container {
+  background-color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+} */
